# opspilot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  compose.yml
.codex/: AGENTS.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 4b8f2d6a9c10_create_users_table.py
apps/api/app/: init.py  main.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: init.py  user.py
apps/api/opspilot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: init.py  test_db_base.py  test_health.py  test_user_model.py
apps/web/: .dockerignore  Dockerfile  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: DECISIONS.md  PROJECT_BRIEF.md  ROADMAP.md  TASKS.md
