[project]
name = "opspilot-api"
version = "0.1.0"
description = "FastAPI backend for OpsPilot AI."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
